adds more classes for styling

--- a/UI/login.html
+++ b/UI/login.html
@@ -25,9 +25,9 @@
     </nav>
     <div class="wrap">
         <h2>Sign In Here</h2>
-        <form>
-            <input type="text" placeholder="Enter Email Address" required>
-            <input type="text" placeholder="Enter Password" required>
+        <form action="prifile.html">
+            <input type="text" placeholder="Enter Email Address">
+            <input type="text" placeholder="Enter Password">
             <input type="submit" value="Login" />
         </form>
         <p>Don't have an account? <a href="index.html">Sign Up here</a></p>
