--- a/UI/index.html
+++ b/UI/index.html
@@ -32,7 +32,7 @@
             <input type="text" placeholder="Enter Password" required>
             <input type="submit" value="Submit" />
         </form>
-        <p>Aready have an account? <a href="login.html">Login here</a></p>
+        <p>Already have an account? <a href="login.html">Login here</a></p>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
