--- a/UI/profile.html
+++ b/UI/profile.html
@@ -128,7 +128,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2018
+        &copy; P. Kimotho 2018
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
