--- a/UI/flags.html
+++ b/UI/flags.html
@@ -43,7 +43,7 @@
                 <input type="text" name="longitude">
             </div>
             <div class="">
-                <label for="image">Upload Image:</label>
+                <label id="image" for="image">Upload Image:</label>
                 <input type="file" name="image">
             </div>
             <div class="">
