[finishes #162147424] create intervention record

--- a/UI/intervention.html
+++ b/UI/intervention.html
@@ -24,14 +24,14 @@
         </ul>
     </nav>
     <div class="flag">
-        <h2>Create a Red-Flag</h2>
+        <h2>Create an Intervention</h2>
         <form id="flagform">
             <div class="">
-                <label for="title">Flag Title:</label>
+                <label for="title">Intervention Title:</label>
                 <input type="text" name="title">
             </div>
             <div class="">
-                <label for="description">Flag Description:</label>
+                <label for="description">Intervention Description:</label>
                 <textarea type="textarea" rows="10" cols="50" name="description"></textarea>
             </div>
             <div class="">
