--- a/UI/admin.html
+++ b/UI/admin.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>iReporter</title>
+    <title>iReporter-Admin Panel</title>
 </head>
 
 <body>
@@ -23,16 +23,14 @@
             <li><a href="#">About</a></li>
         </ul>
     </nav>
-    <div class="wrap">
-        <h2>Sign Up Here</h2>
-        <form>
-            <input type="text" placeholder="Enter First Name" required>
-            <input type="text" placeholder="Enter Last Name" required>
-            <input type="text" placeholder="Enter Email Address" required>
-            <input type="text" placeholder="Enter Password" required>
-            <input type="submit" value="Submit" />
-        </form>
-        <p>Already have an account? <a href="login.html">Login here</a></p>
+    <header>
+        Admin Panel
+    </header>
+    <div class="sidebar">
+
+    </div>
+    <div class="data">
+
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
