--- a/UI/admin.html
+++ b/UI/admin.html
@@ -27,10 +27,58 @@
         Admin Panel
     </header>
     <div class="sidebar">
-
+        <ul>
+            <li>Users</li>
+            <li>Red Flags</li>
+            <li>Interventions</li>
+        </ul>
     </div>
     <div class="data">
-
+        <table>
+            <tr>
+                <th>User</th>
+                <th>Date</th>
+                <th>Red Flag</th>
+                <th>Location</th>
+                <th>Action</th>
+            </tr>
+            <tr>
+                <td>Paul Kimotho</td>
+                <td>22/11/2018</td>
+                <td>Misappropriation of funds at Korapt public school</td>
+                <td>23.5, 15.9</td>
+                <td><select name="" id="">
+                        <option>Assign</option>
+                        <option>Under Investigation</option>
+                        <option>Reject</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Shanelle Maingi</td>
+                <td>15/08/2018</td>
+                <td>Bribery of public officials </td>
+                <td>40.5, 18.6</td>
+                <td><select name="" id="">
+                        <option>Assign</option>
+                        <option>Under Investigation</option>
+                        <option>Reject</option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>Marcus Myra</td>
+                <td>21/10/2018</td>
+                <td>Sale of public playground to a private developer</td>
+                <td>13.52, 23.69</td>
+                <td><select>
+                        <option>Assign</option>
+                        <option>Under Investigation</option>
+                        <option>Reject</option>
+                    </select>
+                </td>
+            </tr>
+        </table>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
