--- a/UI/admin.html
+++ b/UI/admin.html
@@ -17,57 +17,64 @@
 
         </div>
         <ul>
-            <li><a href="#">Red Flags</a></li>
-            <li><a href="#">Interventions</a></li>
+            <li><a href="admin.html">Red Flags</a></li>
+            <li><a href="admin-interventions.html">Interventions</a></li>
         </ul>
     </nav>
     <header>
         Admin Panel
     </header>
     <div class="data">
-        <table>
+        <table id="records">
             <tr>
-                <th>User</th>
+                <th>Red-Flag ID</th>
                 <th>Date</th>
-                <th>Red Flag</th>
+                <th>Red Flags</th>
                 <th>Location</th>
+                <th>Assign Status</th>
                 <th>Action</th>
             </tr>
             <tr>
-                <td>Paul Kimotho</td>
+                <td><a href="#">1</td>
                 <td>22/11/2018</td>
-                <td>Misappropriation of funds at Korapt public school</td>
+                <td><a href="#">Misappropriation of funds at Korapt public school</a></td>
                 <td>23.5, 15.9</td>
                 <td><select name="" id="">
-                        <option>Assign</option>
+                        <option>Select Status</option>
                         <option>Under Investigation</option>
-                        <option>Reject</option>
+                        <option>Resolved</option>
+                        <option>Rejected</option>
                     </select>
                 </td>
+                <td><button>Assign</button></td>
             </tr>
             <tr>
-                <td>Shanelle Maingi</td>
+                <td><a href="#">2</td>
                 <td>15/08/2018</td>
-                <td>Bribery of public officials </td>
+                <td><a href="#">Bribery of public officials </a></td>
                 <td>40.5, 18.6</td>
                 <td><select name="" id="">
-                        <option>Assign</option>
+                        <option>Select Status</option>
                         <option>Under Investigation</option>
-                        <option>Reject</option>
+                        <option>Resolved</option>
+                        <option>Rejected</option>
                     </select>
                 </td>
+                <td><button>Assign</button></td>
             </tr>
             <tr>
-                <td>Marcus Myra</td>
+                <td><a href="#">3</td>
                 <td>21/10/2018</td>
-                <td>Sale of public playground to a private developer</td>
+                <td><a href="#">Sale of public playground to a private developer</a></td>
                 <td>13.52, 23.69</td>
                 <td><select>
-                        <option>Assign</option>
+                        <option>Select Status</option>
                         <option>Under Investigation</option>
-                        <option>Reject</option>
+                        <option>Resolved</option>
+                        <option>Rejected</option>
                     </select>
                 </td>
+                <td><button>Assign</button></td>
             </tr>
         </table>
     </div>
