[finishes #162184270] create individual admin redflag and intervention records

--- a/UI/admin-intervention.html
+++ b/UI/admin-intervention.html
@@ -28,19 +28,16 @@
     <div class="data">
         <table id="records">
             <tr>
-                <th>Red-Flag ID</th>
-                <th>Date</th>
-                <th>Red Flags</th>
-                <th>Location</th>
+                <th>Intervention ID</th>
+                <th>Date Created</th>
+                <th>Intervention Title</th>
                 <th>Assign Status</th>
                 <th>Action</th>
             </tr>
-
             <tr>
-                <td><a href="admin-redflag.html">2</td>
-                <td>15/08/2018</td>
-                <td><a href="admin-redflag.html">Bribery of public officials </a></td>
-                <td>40.5, 18.6</td>
+                <td>1</td>
+                <td>22/11/2018</td>
+                <td>Repair of Karamajong Bridge</td>
                 <td><select name="" id="">
                         <option>Select Status</option>
                         <option>Under Investigation</option>
@@ -50,21 +47,18 @@
                 </td>
                 <td><button>Assign</button></td>
             </tr>
-            <tr>
-                <td><a href="admin-redflag.html">3</td>
-                <td>21/10/2018</td>
-                <td><a href="admin-redflag.html">Sale of public playground to a private developer</a></td>
-                <td>13.52, 23.69</td>
-                <td><select>
-                        <option>Select Status</option>
-                        <option>Under Investigation</option>
-                        <option>Resolved</option>
-                        <option>Rejected</option>
-                    </select>
-                </td>
-                <td><button>Assign</button></td>
-            </tr>
         </table>
+        <div>
+            <h2>Intervention Description</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div>
+            <h2>Images/Illustrations</h2>
+        </div>
+        <div>
+            <h2>Google Map Locator</h2>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
