--- a/UI/admin-interventions.html
+++ b/UI/admin-interventions.html
@@ -19,6 +19,7 @@
         <ul>
             <li><a href="admin.html">Red Flags</a></li>
             <li><a href="admin-interventions.html">Interventions</a></li>
+            <li id="logout"><a href="#">Logout</a></li>
         </ul>
     </nav>
     <header>
@@ -35,11 +36,11 @@
                 <th>Action</th>
             </tr>
             <tr>
-                <td><a href="#">1</td>
+                <td><a href="admin-intervention.html">1</a></td>
                 <td>22/11/2018</td>
-                <td><a href="#">Misappropriation of funds at Korapt public school</a></td>
+                <td><a href="admin-intervention.html">Misappropriation of funds at Korapt public school</a></td>
                 <td>23.5, 15.9</td>
-                <td><select name="" id="">
+                <td><select>
                         <option>Select Status</option>
                         <option>Under Investigation</option>
                         <option>Resolved</option>
@@ -49,11 +50,11 @@
                 <td><button>Assign</button></td>
             </tr>
             <tr>
-                <td><a href="#">2</td>
+                <td><a href="admin-intervention.html">2</td>
                 <td>15/08/2018</td>
-                <td><a href="#">Bribery of public officials </a></td>
+                <td><a href="admin-intervention.html">Floods in Koibatek </a></td>
                 <td>40.5, 18.6</td>
-                <td><select name="" id="">
+                <td><select>
                         <option>Select Status</option>
                         <option>Under Investigation</option>
                         <option>Resolved</option>
@@ -63,9 +64,9 @@
                 <td><button>Assign</button></td>
             </tr>
             <tr>
-                <td><a href="#">3</td>
+                <td><a href="admin-intervention.html">3</td>
                 <td>21/10/2018</td>
-                <td><a href="#">Sale of public playground to a private developer</a></td>
+                <td><a href="admin-intervention.html">Tree planting in Mau</a></td>
                 <td>13.52, 23.69</td>
                 <td><select>
                         <option>Select Status</option>
