Add create red-flag and intervention links

--- a/UI/create-flag.html
+++ b/UI/create-flag.html
@@ -17,10 +17,10 @@
 
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Red Flags</a></li>
-            <li><a href="#">Interventions</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="profile.html">Home</a></li>
+            <li><a href="profile.html">Red Flags</a></li>
+            <li><a href="user-interventions.html">Interventions</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
     <div class="flag">
