[finishes #162184216] Create user-flag and user-intervention separate pages

--- a/UI/user-profile/user-redflag.html
+++ b/UI/user-profile/user-redflag.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>iReporter-Admin Panel</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>iReporter-My Profile</title>
 </head>
 
 <body>
@@ -17,15 +17,15 @@
 
         </div>
         <ul>
-            <li><a href="admin.html">Red Flags</a></li>
-            <li><a href="admin-interventions.html">Interventions</a></li>
+            <li><a href="profile.html">Red Flags</a></li>
+            <li><a href="user-interventions.html">Interventions</a></li>
         </ul>
     </nav>
     <header>
-        Admin Panel
+        My Profile
     </header>
     <div class="data">
-        <table id="records">
+        <table class="records">
             <tr>
                 <th>Red-Flag ID</th>
                 <th>Date Created</th>
