--- a/UI/about.html
+++ b/UI/about.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title>iReporter</title>
+    <title>iReporter-About</title>
 </head>
 
 <body>
@@ -24,15 +24,11 @@
         </ul>
     </nav>
     <div class="wrap">
-        <h2>Sign Up Here</h2>
-        <form>
-            <input type="text" placeholder="Enter First Name" required>
-            <input type="text" placeholder="Enter Last Name" required>
-            <input type="text" placeholder="Enter Email Address" required>
-            <input type="text" placeholder="Enter Password" required>
-            <input type="submit" value="Submit" />
-        </form>
-        <p>Already have an account? <a href="login.html">Login here</a></p>
+        <p>Corruption is a huge bane to Africa’s development. African countries must develop novel and localised solutions that will curb this menace, hence the birth of iReporter. iReporter enables any/every citizen to bring any form of corruption to the
+            notice of appropriate authorities and the general public.</p>
+        <p>Through iReporter, you can also raise issues that requires government intervention such as bad roads, collapsed bridges, floods or any other issue that may requre immediate intervention from the goverment. To further support the item that requires
+            intervention, kindly upload some images to help the government personel assess the issue. </p>
+        <p>iReporter admins work tirelessly to ensure all issues raised by the citizens are escalated to the relevant government agencies. </p>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
