--- a/UI/admin/admin-intervention.html
+++ b/UI/admin/admin-intervention.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>iReporter-Admin Panel</title>
 </head>
 
@@ -23,10 +23,10 @@
         </ul>
     </nav>
     <header>
-        Admin Panel
+        <h2>Admin Panel</h2>
     </header>
     <div class="data">
-        <table id="records">
+        <table class="records">
             <tr>
                 <th>Intervention ID</th>
                 <th>Date Created</th>
