--- a/UI/admin/admin-redflag.html
+++ b/UI/admin/admin-redflag.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>iReporter-Admin Panel</title>
 </head>
 
@@ -19,32 +19,24 @@
         <ul>
             <li><a href="admin.html">Red Flags</a></li>
             <li><a href="admin-interventions.html">Interventions</a></li>
-            <li id="logout"><a href="#">Logout</a></li>
         </ul>
     </nav>
     <header>
-        My Profile
-        <ul>
-            <li><a href="create-flag.html">Create New Red-flag</a></li>
-            <li><a href="create-intervention.html">Create New Intervention</a></li>
-        </ul>
+        <h2>Admin Panel</h2>
     </header>
     <div class="data">
-        <table id="records">
+        <table class="records">
             <tr>
                 <th>Red-Flag ID</th>
-                <th>Date</th>
-                <th>Red Flags</th>
-                <th>Location</th>
+                <th>Date Created</th>
+                <th>Red Flag Title</th>
                 <th>Assign Status</th>
                 <th>Action</th>
             </tr>
-
             <tr>
-                <td><a href="admin-redflag.html">2</td>
-                <td>15/08/2018</td>
-                <td><a href="admin-redflag.html">Bribery of public officials </a></td>
-                <td>40.5, 18.6</td>
+                <td>1</td>
+                <td>22/11/2018</td>
+                <td>Misappropriation of funds at Korapt public school</td>
                 <td><select name="" id="">
                         <option>Select Status</option>
                         <option>Under Investigation</option>
@@ -54,21 +46,18 @@
                 </td>
                 <td><button>Assign</button></td>
             </tr>
-            <tr>
-                <td><a href="admin-redflag.html">3</td>
-                <td>21/10/2018</td>
-                <td><a href="admin-redflag.html">Sale of public playground to a private developer</a></td>
-                <td>13.52, 23.69</td>
-                <td><select>
-                        <option>Select Status</option>
-                        <option>Under Investigation</option>
-                        <option>Resolved</option>
-                        <option>Rejected</option>
-                    </select>
-                </td>
-                <td><button>Assign</button></td>
-            </tr>
         </table>
+        <div>
+            <h2>Red Flag Description</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div>
+            <h2>Images/Illustrations</h2>
+        </div>
+        <div>
+            <h2>Google Map Locator</h2>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
