--- a/UI/admin/admin.html
+++ b/UI/admin/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>iReporter-Admin Panel</title>
 </head>
 
@@ -23,38 +23,25 @@
         </ul>
     </nav>
     <header>
-        Admin Panel
+        <h2>Admin Panel</h2>
     </header>
     <div class="data">
-        <table id="records">
+        <table class="records">
             <tr>
-                <th>Intervention ID</th>
+                <th>Red-Flag ID</th>
                 <th>Date</th>
-                <th>Interventions</th>
+                <th>Red Flags</th>
                 <th>Location</th>
                 <th>Assign Status</th>
                 <th>Action</th>
             </tr>
+
             <tr>
-                <td><a href="admin-intervention.html">1</a></td>
-                <td>22/11/2018</td>
-                <td><a href="admin-intervention.html">Misappropriation of funds at Korapt public school</a></td>
-                <td>23.5, 15.9</td>
-                <td><select>
-                        <option>Select Status</option>
-                        <option>Under Investigation</option>
-                        <option>Resolved</option>
-                        <option>Rejected</option>
-                    </select>
-                </td>
-                <td><button>Assign</button></td>
-            </tr>
-            <tr>
-                <td><a href="admin-intervention.html">2</td>
+                <td><a href="admin-redflag.html">2</td>
                 <td>15/08/2018</td>
-                <td><a href="admin-intervention.html">Floods in Koibatek </a></td>
+                <td><a href="admin-redflag.html">Bribery of public officials </a></td>
                 <td>40.5, 18.6</td>
-                <td><select>
+                <td><select name="" id="">
                         <option>Select Status</option>
                         <option>Under Investigation</option>
                         <option>Resolved</option>
@@ -64,9 +51,9 @@
                 <td><button>Assign</button></td>
             </tr>
             <tr>
-                <td><a href="admin-intervention.html">3</td>
+                <td><a href="admin-redflag.html">3</td>
                 <td>21/10/2018</td>
-                <td><a href="admin-intervention.html">Tree planting in Mau</a></td>
+                <td><a href="admin-redflag.html">Sale of public playground to a private developer</a></td>
                 <td>13.52, 23.69</td>
                 <td><select>
                         <option>Select Status</option>
