--- a/UI/user-profile/create-flag.html
+++ b/UI/user-profile/create-flag.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>iReporter</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>iReporter-Create Red-Flag</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <li><a href="profile.html">Home</a></li>
             <li><a href="profile.html">Red Flags</a></li>
             <li><a href="user-interventions.html">Interventions</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
     <div class="flag">
