--- a/UI/user-profile/edit-redflag.html
+++ b/UI/user-profile/edit-redflag.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <title>iReporter</title>
+    <link rel="stylesheet" href="../style.css">
+    <title>iReporter-Edit Red-Flag</title>
 </head>
 
 <body>
@@ -17,21 +17,21 @@
 
         </div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Red Flags</a></li>
-            <li><a href="#">Interventions</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="profile.html">Home</a></li>
+            <li><a href="profile.html">Red Flags</a></li>
+            <li><a href="user-interventions.html">Interventions</a></li>
+            <li><a href="../about.html">About</a></li>
         </ul>
     </nav>
     <div class="flag">
-        <h2>Create an Intervention</h2>
+        <h2>Edit a Red-Flag</h2>
         <form id="flagform">
             <div class="">
-                <label for="title">Intervention Title:</label>
+                <label for="title">Flag Title:</label>
                 <input type="text" name="title">
             </div>
             <div class="">
-                <label for="description">Intervention Description:</label>
+                <label for="description">Flag Description:</label>
                 <textarea type="textarea" rows="10" cols="50" name="description"></textarea>
             </div>
             <div class="">
