--- a/UI/index.html
+++ b/UI/index.html
@@ -21,6 +21,7 @@
             <li><a href="user-profile/profile.html">Red Flags</a></li>
             <li><a href="user-profile/user-interventions.html">Interventions</a></li>
             <li><a href="about.html">About</a></li>
+            <li id="logout"><a href="admin/admin.html">Admin Section</a></li>
         </ul>
     </nav>
     <div class="wrap">
