--- a/UI/admin/admin.html
+++ b/UI/admin/admin.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="admin.html">Red Flags</a></li>
             <li><a href="admin-interventions.html">Interventions</a></li>
-            <li id="logout"><a href="#">Logout</a></li>
+            <li id="logout"><a href="../index.html">Logout</a></li>
         </ul>
     </nav>
     <header>
