--- a/UI/user-profile/user-interventions.html
+++ b/UI/user-profile/user-interventions.html
@@ -21,7 +21,7 @@
             <li><a href="profile.html">Red Flags</a></li>
             <li><a href="user-interventions.html">Interventions</a></li>
             <li><a href="../about.html">About</a></li>
-            <li id="logout"><a href="#">Logout</a></li>
+            <li id="logout"><a href="../index.html">Logout</a></li>
         </ul>
     </nav>
     <header>
